@@ -1,3 +1,9 @@
+2003-01-17 Tom Copeland (tom@infoether.com)
+
+	* www/scm/index.php, etc/local.inc: Added new sys_cvs_single_host system
+	variable that gives all projects the same CVS hostname.  Set it up
+	as being on - i.e., everyone gets the same hostname - by default.
+
 2003-01-16  Roland Mas  <lolando@debian.org>
 
 	* www/include/languages/*.tab: Recoded everything to UTF-8.
